--- a/src/main/resources/email.properties
+++ b/src/main/resources/email.properties
@@ -1,4 +1,4 @@
-mail.smtp.host=smtp.example.com
+mail.smtp.host=smtp.gmail.com
 mail.smtp.port=587
 mail.smtp.auth=true
 mail.smtp.starttls.enable=true
