--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,5 +12,13 @@
         <filter-name>TokenFilter</filter-name>
         <url-pattern>/user/*</url-pattern>
     </filter-mapping>
+    <filter>
+        <filter-name>RegisterFilter</filter-name>
+        <filter-class>hcmuaf.edu.vn.BikeEcommerce.filter.RegisterFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>RegisterFilter</filter-name>
+        <url-pattern>/register</url-pattern>
+    </filter-mapping>
 
 </web-app>
