--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,11 +5,11 @@
          version="4.0">
 
     <filter>
-        <filter-name>TokenFilter</filter-name>
-        <filter-class>hcmuaf.edu.vn.BikeEcommerce.filter.TokenFilter</filter-class>
+        <filter-name>UserFilter</filter-name>
+        <filter-class>hcmuaf.edu.vn.BikeEcommerce.filter.UserFilter</filter-class>
     </filter>
     <filter-mapping>
-        <filter-name>TokenFilter</filter-name>
+        <filter-name>UserFilter</filter-name>
         <url-pattern>/user/*</url-pattern>
     </filter-mapping>
     <filter>
@@ -20,13 +20,13 @@
         <filter-name>RegisterFilter</filter-name>
         <url-pattern>/register</url-pattern>
     </filter-mapping>
-    <filter>
-        <filter-name>JsonFilter</filter-name>
-        <filter-class>hcmuaf.edu.vn.BikeEcommerce.filter.JsonFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>JsonFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
+<!--    <filter>-->
+<!--        <filter-name>JsonFilter</filter-name>-->
+<!--        <filter-class>hcmuaf.edu.vn.BikeEcommerce.filter.JsonFilter</filter-class>-->
+<!--    </filter>-->
+<!--    <filter-mapping>-->
+<!--        <filter-name>JsonFilter</filter-name>-->
+<!--        <url-pattern>/*</url-pattern>-->
+<!--    </filter-mapping>-->
 
 </web-app>
