--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ target/
 
 
 ### IntelliJ IDEA ###
+.idea/
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
@@ -40,6 +41,5 @@ build/
 ### Mac OS ###
 .DS_Store
 
-dataSources.xml
-.idea/dataSources.xml
-target
+
+
