edit up load file signature

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,5 +1,5 @@
-db.host=35.240.242.56
+db.host=localhost
 db.port=3306
 db.username=root
-db.password=0511
+db.password=
 db.databaseName=bike_ecommerce
