--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
-
+<welcome-file-list>
+    <welcome-file>logIn.jsp</welcome-file>
+</welcome-file-list>
     <filter>
         <filter-name>UserFilter</filter-name>
         <filter-class>hcmuaf.edu.vn.BikeEcommerce.filter.UserFilter</filter-class>
