--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
 <welcome-file-list>
-    <welcome-file>logIn.jsp</welcome-file>
+    <welcome-file>login</welcome-file>
 </welcome-file-list>
     <filter>
         <filter-name>UserFilter</filter-name>
